cdk.out/MiEc2Stack.template.json
{
 "Resources": {
  "MiVPC02E74BD7": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MiEc2Stack/MiVPC"
     }
    ]
   }
  },
  "MiVPCPublicSubnetSubnet1Subnet9889EEC4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MiEc2Stack/MiVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MiVPC02E74BD7"
    }
   }
  },
  "MiVPCPublicSubnetSubnet1RouteTable9BD7A30C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MiEc2Stack/MiVPC/PublicSubnetSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MiVPC02E74BD7"
    }
   }
  },
  "MiVPCPublicSubnetSubnet1RouteTableAssociation7E5D57F5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MiVPCPublicSubnetSubnet1RouteTable9BD7A30C"
    },
    "SubnetId": {
     "Ref": "MiVPCPublicSubnetSubnet1Subnet9889EEC4"
    }
   }
  },
  "MiVPCPublicSubnetSubnet1DefaultRoute81731318": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MiVPCIGW6CC4C31C"
    },
    "RouteTableId": {
     "Ref": "MiVPCPublicSubnetSubnet1RouteTable9BD7A30C"
    }
   },
   "DependsOn": [
    "MiVPCVPCGW61932BEB"
   ]
  },
  "MiVPCIGW6CC4C31C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MiEc2Stack/MiVPC"
     }
    ]
   }
  },
  "MiVPCVPCGW61932BEB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MiVPCIGW6CC4C31C"
    },
    "VpcId": {
     "Ref": "MiVPC02E74BD7"
    }
   }
  },
  "MiSGCB63EE95": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MiEc2Stack/MiSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "SSH",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MiVPC02E74BD7"
    }
   }
  },
  "MiInstanciaEC2InstanceProfileBADA9BCA": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     "LabRole"
    ]
   }
  },
  "MiInstanciaEC23B63CD8A": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/xvda",
      "Ebs": {
       "VolumeSize": 20
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "MiInstanciaEC2InstanceProfileBADA9BCA"
    },
    "ImageId": "ami-0363234289a7b6202",
    "InstanceType": "t3.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "MiSGCB63EE95",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "MiVPCPublicSubnetSubnet1Subnet9889EEC4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MiEc2Stack/MiInstanciaEC2"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   }
  }
 }
}
